--- a/fastcamus-project-board/src/main/resources/application.yaml
+++ b/fastcamus-project-board/src/main/resources/application.yaml
@@ -33,7 +33,10 @@ spring:
   sql:
     init:
       mode: always
----
+  data:
+    rest:
+      base-path: /api
+      detection-strategy: annotated
 
 #spring:
 #  config:
