--- a/fastcamus-project-board/.gitignore
+++ b/fastcamus-project-board/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij+all,gradle,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij+all,gradle,windows
 
+### Querydsl
+/src/main/generated
+
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
