--- a/fastcamus-project-board/src/main/resources/application.yaml
+++ b/fastcamus-project-board/src/main/resources/application.yaml
@@ -37,6 +37,8 @@ spring:
     rest:
       base-path: /api
       detection-strategy: annotated
+  thymeleaf3:
+    decoupled-logic: true
 
 #spring:
 #  config:
